[tool.poetry]
name = "flask_psyco_template"
version = "0.1.0"
description = ""
authors = ["Alexander Lavrov <lavrov@selectel.ru>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask_sqlalchemy = "^2.4"
flask-migrate = "^2.5"
flask-potion = "^0.16.0"
psycopg2-binary = "^2.8"
flask-dramatiq = "^0.4.1"
redis = "^3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
